modules/k8-byexamples-ingress-controller/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $HOST
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #
    # authentication
    #
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: nginx-ingress-basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - foo"
    #
    # enable CORS
    #
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "https://onlythisdomaincanuseme.com"
    # nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    #     
spec:
  tls:
  - hosts:
    - $HOST
    secretName: tls-$HOST
  rules:
  - host: $HOST
    http:
      paths:
      - path: /
        backend:
          serviceName: $SERVICE_NAME
          servicePort: $SERVICE_PORT
